Comment out flex css to put footer at bottom of page. Debugging display issues on Safari.

--- a/static/scss/pages/_allpages.scss
+++ b/static/scss/pages/_allpages.scss
@@ -198,31 +198,31 @@ shadow added to give depth and contrast with the image for readability */
 /* CREDIT: code to fix footer to bottom of page even when there is not
 enough content to push it down taken from https://css-tricks.com/couple-takes-sticky-footer/ */
 
-html, body {
-    height: 100%;
-}
+// html, body {
+//     height: 100%;
+// }
 
-body {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-}
+// body {
+//     display: -webkit-box;
+//     display: -ms-flexbox;
+//     display: flex;
+//     -webkit-box-orient: vertical;
+//     -webkit-box-direction: normal;
+//         -ms-flex-direction: column;
+//             flex-direction: column;
+// }
 
-.content {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 0 auto;
-            flex: 1 0 auto;
-}
+// .content {
+//     -webkit-box-flex: 1;
+//         -ms-flex: 1 0 auto;
+//             flex: 1 0 auto;
+// }
 
 footer {
     background-color: $mid-blue-hover;
     color: white;
-    -ms-flex-negative: 0;
-        flex-shrink: 0;
+    // -ms-flex-negative: 0;
+    //     flex-shrink: 0;
 }
 
 
